src/test/ui/const-eval/promote-const-fn.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/promote-const-fn.rs:16:27
   |
LL |     let x: &'static () = &foo(); //~ borrowed value does not live long enough
   |                           ^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
